2006-02-27  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/libvisual/visual.c: (gst_visual_init),
	(gst_vis_src_negotiate), (get_buffer), (plugin_init):
	Don't use gst_pad_use_fixed_caps, because it prevents downstream from
	being able to renegotiate the size. Instead, use the negotiation
	algorithm from the goom plugin to pick an initial output caps. 

	Also, allow theoretical libvisual plugins that might support non-GL 
	output even if they also do GL.

2006-02-26  Julien MOUTTE  <julien@moutte.net>

	* ext/libvisual/visual.c: (gst_visual_init),
	(gst_visual_src_setcaps), (get_buffer), (gst_visual_chain),
	(plugin_init): Load only non GL plugins. Fix some memleaks and 
	possible negotiation issues.

2006-02-25  Julien MOUTTE  <julien@moutte.net>

	* gst-libs/gst/tag/tag.h: Adding Annodex tags here.

2006-02-24  Michael Smith  <msmith@fluendo.com>

	* gst/typefind/gsttypefindfunctions.c: (mpeg4_video_type_find),
	(cmml_type_find), (plugin_init):
	  Fix CMML type find function to not require a specific minor version
	  of the CMML header.

	  Add an MPEG4 video elementary stream typefind function.

2006-02-04  Michael Smith  <msmith@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_parse_skeleton_fishead),
	(gst_ogg_pad_parse_skeleton_fisbone), (gst_ogg_pad_query_convert),
	(gst_ogg_demux_chain_peer), (gst_ogg_pad_submit_packet),
	(gst_ogg_demux_perform_seek), (gst_ogg_demux_read_chain),
	(gst_ogg_demux_read_end_chain), (gst_ogg_demux_collect_chain_info),
	(gst_ogg_demux_change_state), (gst_annodex_granule_to_time):
	  Annodex support in ogg demuxer. Doesn't do very much without the
	  other annodex patches (to come).

2006-02-24  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_caps):
	  Pick up palette for MS video v1 (#327028, patch by:
	  Fabrizio Gennari <fabrizio dot get at tiscali dot it>)

2006-02-24  Tim-Philipp Müller  <tim at centricular dot net>
